Bug fix - get quote on mobile hide

--- a/themes/gv_sky/css/sass/_parts/quote.sass
+++ b/themes/gv_sky/css/sass/_parts/quote.sass
@@ -13,6 +13,9 @@
 	border-radius: 5px 5px 0 0
 	overflow: hidden
 
+	+m(736)
+		display: none !important
+
 	&.show
 		display: block
 		bottom: 0
